correct the wrong grammar of align

--- a/givecare.css
+++ b/givecare.css
@@ -15,7 +15,7 @@ body {
 }
 
 .boxed_text {
-  align: right;
+  text-align: left;
   margin: 0pt;
   width: 100%;
 }
